--- a/bcos-utilities/CMakeLists.txt
+++ b/bcos-utilities/CMakeLists.txt
@@ -5,7 +5,7 @@ SET(Boost_USE_STATIC_LIBS ON)
 if(HUNTER_ENABLED)
     hunter_add_package(Boost COMPONENTS all)
 endif()
-find_package(Boost REQUIRED COMPONENTS log chrono system iostreams thread)
+find_package(Boost REQUIRED COMPONENTS log chrono system thread)
 
 add_library(${BCOS_UTILITIES_TARGET} ${SRC_LIST} ${HEADERS})
-target_link_libraries(${BCOS_UTILITIES_TARGET} PUBLIC Boost::log Boost::chrono Boost::iostreams Boost::thread)
+target_link_libraries(${BCOS_UTILITIES_TARGET} PUBLIC Boost::log Boost::chrono Boost::thread)
