--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -178,16 +178,17 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
-      - uses: actions/cache@v2
-        id: vcpkg-cache
-        with:
-          path: |
-            ${{ env.VCPKG_ROOT }}
-            ${{ github.workspace }}/build/vcpkg_installed
-            !${{ env.VCPKG_ROOT }}/.git
-            !${{ env.VCPKG_ROOT }}/buildtrees
-            !${{ env.VCPKG_ROOT }}/packages
-            !${{ env.VCPKG_ROOT }}/downloads
+      # - uses: actions/cache@v2
+      #   id: vcpkg-cache
+      #   with:
+      #     path: |
+      #       ${{ env.VCPKG_ROOT }}
+      #       ${{ github.workspace }}/build/vcpkg_installed
+      #       !${{ env.VCPKG_ROOT }}/.git
+      #       !${{ env.VCPKG_ROOT }}/buildtrees
+      #       !${{ env.VCPKG_ROOT }}/packages
+      #       !${{ env.VCPKG_ROOT }}/downloads
+      - uses: friendlyanon/setup-vcpkg@v1
       - name: install build tool
         if: runner.os == 'Linux'
         run: |
