--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -178,18 +178,8 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
-      # - uses: actions/cache@v2
-      #   id: vcpkg-cache
-      #   with:
-      #     path: |
-      #       ${{ env.VCPKG_ROOT }}
-      #       ${{ github.workspace }}/build/vcpkg_installed
-      #       !${{ env.VCPKG_ROOT }}/.git
-      #       !${{ env.VCPKG_ROOT }}/buildtrees
-      #       !${{ env.VCPKG_ROOT }}/packages
-      #       !${{ env.VCPKG_ROOT }}/downloads
       - uses: friendlyanon/setup-vcpkg@v1
-      - name: install build tool
+      - name: prepare
         if: runner.os == 'Linux'
         run: |
           sudo apt install -y git curl g++-10 cmake ccache lcov
@@ -197,10 +187,8 @@ jobs:
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 100
         if: runner.os == 'Windows'
         uses: microsoft/setup-msbuild@v1.1
-        run: echo "cmake_padding='-G "Visual Studio 16 2019" -A x64'" >> $GITHUB_ENV
         if: runner.os = 'macOS'
-        run: |
-          brew install llvm
+        run: brew install llvm
       - name: configure
         run:
           mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ${{ env.cmake_padding }} ../ 
