--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -179,9 +179,11 @@ jobs:
         with:
           fetch-depth: 5
       - uses: friendlyanon/setup-vcpkg@v1
+        with: { committish: 7e3dcf74e37034eea358934a90a11d618520e139 }
       - name: Prepare windows msbuild
         if: runner.os == 'Windows'
         uses: microsoft/setup-msbuild@v1.1
+        run: cmake_suffix='-G "Visual Studio 16 2019" -A x64'
       - name: Prepare linux build tool
         if: runner.os == 'Linux'
         run: |
