Fix build command

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -12,162 +12,7 @@ on:
       - "README.md"
   release:
     types: [published, created, edited]
-env:
-  CCACHE_DIR: ${{ github.workspace }}/ccache
 
-jobs:
-  build_with_clang:
-    name: build_with_clang
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [macos-latest]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 5
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: |
-            /home/runner/.hunter
-            /Users/runner/.hunter/
-            ccache
-          key: hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            hunter-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            hunter-clang-v1-notest-${{ runner.temp }}-
-      - name: install macOS dependencies
-        if: runner.os == 'macOS'
-        run: brew install ccache
-      - name: install Ubuntu dependencies
-        if: runner.os == 'Linux'
-        run: sudo apt install -y git curl build-essential clang cmake ccache libboost1.71-all-dev
-      - name: configure
-        if: runner.os == 'macOS'
-        run: export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
-      - name: configure
-        if: runner.os == 'Linux'
-        run: CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON -DHUNTER_CONFIGURATION_TYPES=Debug
-      - name: compile
-        run: make -j2
-      - name: run test
-        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test ARGS="--output-on-failure"
-  build_with_gcc:
-    name: build_with_gcc
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-20.04]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 5
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: /home/runner/.hunter
-          key: hunter-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            hunter-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            hunter-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            hunter-gcc-v1-notest-${{ runner.temp }}-
-      - uses: actions/cache@v2
-        id: ccache
-        with:
-          path: ccache
-          key: cache-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            ccache-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            cache-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            cache-gcc-v1-notest-${{ runner.temp }}-
-      - name: install Ubuntu dependencies
-        run: sudo apt install -y git curl build-essential cmake ccache lcov libboost1.71-all-dev
-      - name: configure
-        run: cmake . -DTESTS=ON -DCOVERAGE=ON -DDEBUG=ON -DHUNTER_ENABLED=OFF
-      - name: compile
-        run: make -j2
-      - name: run test
-        run: CTEST_OUTPUT_ON_FAILURE=TRUE make test
-      - name: generate coverage
-        run: make cov
-      - name: upload code coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          file: ./coverage.info
-          name: bcos-utilities coverage
-  build_with_centos:
-    name: build_with_centos
-    runs-on: ubuntu-latest
-    container:
-      image: docker.io/centos:7
-      volumes:
-        - /github/home/.hunter:/github/home/.hunter
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 5
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: |
-            /home/runner/.hunter
-            /github/home/.hunter
-            ccache
-          key: hunter-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            hunter-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            hunter-centos-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            hunter-centos-v1-notest-${{ runner.temp }}-
-      - name: install CentOS dependencies
-        run: |
-          yum install -y epel-release centos-release-scl
-          yum install -y git make gcc gcc-c++ glibc-static glibc-devel cmake3 ccache devtoolset-10 boost169-static boost169-devel openssl libzstd-devel zlib-devel flex bison python-devel python3-devel && source /opt/rh/devtoolset-10/enable
-      - name: configure and compile
-        run: |
-          source /opt/rh/devtoolset-10/enable
-          # mkdir -p build && cd build
-          cmake3 . -DTESTS=ON  -DBOOST_INCLUDEDIR=/usr/include/boost169/ -DBOOST_LIBRARYDIR=/usr/lib64/boost169/ -DHUNTER_ENABLED=OFF
-          make -j2
-          CTEST_OUTPUT_ON_FAILURE=TRUE make test ARGS="--output-on-failure"
-  build_with_windows:
-    name: build_with_windows
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [windows-2019]
-    steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 5
-      - uses: actions/cache@v2
-        id: cache
-        with:
-          path: |
-            /home/runner/.hunter
-            /github/home/.hunter
-            /Users/runner/.hunter
-            /home/runner/.hunter/_Base/Download/
-            /github/home/.hunter/_Base/Download/
-            /Users/runner/.hunter/_Base/Download/
-            C:/.hunter/
-            C:/.hunter/_Base/Download/
-            ccache
-          key: hunter-msvc-v3-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-          restore-keys: |
-            hunter-msvc-v3-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
-            hunter-msvc-v3-notest-${{ runner.temp }}-${{ github.base_ref }}-
-            hunter-msvc-v3-notest-${{ runner.temp }}-
-      - name: Add MSbuild to PATH
-        uses: microsoft/setup-msbuild@v1.1
-      - name: configure
-        if: runner.os == 'Windows'
-        run:
-          mkdir -p build && cd build && cmake -G "Visual Studio 16 2019" -A x64 ../ -DHUNTER_STATUS_DEBUG=ON
-      - name: compile
-        run: 
-          cd build && MSBuild /version && MSBuild bcos-utilities.sln /p:Configuration=Release /p:Platform=x64
   build_with_vcpkg:
     name: build_with_vcpkg_all_platform
     runs-on: ${{ matrix.os }}
@@ -197,4 +42,4 @@ jobs:
           mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../ 
       - name: compile
         run: 
-          cd build && cmake --build --parallel .
+          cd build && cmake --build . --parallel
