--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -31,15 +31,19 @@ jobs:
       - name: Prepare linux build tool
         if: runner.os == 'Linux'
         run: |
-          sudo apt install -y git curl g++-10 cmake ccache lcov
           sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-10 100
           sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-10 100
       - name: prepare macOS build tool
         if: runner.os == 'macOS'
-        run: brew install llvm
+        env:
+          CC: /usr/local/opt/llvm/bin/clang
+          CXX: /usr/local/opt/llvm/bin/clang++
       - name: configure
         run:
           mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../ 
       - name: compile
         run: 
           cd build && cmake --build . --parallel
+      - name: test
+        run:
+          cd build && CTEST_OUTPUT_ON_FAILURE=TRUE ctest
