--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -45,5 +45,6 @@ jobs:
         run: 
           cd build && cmake --build . --parallel
       - name: Test
+        if: runner.os != 'Windows'
         run:
           cd build && CTEST_OUTPUT_ON_FAILURE=TRUE ctest
