Rename package manager

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -19,7 +19,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-20.04,windows-2019,macos-latest]
-        use_hunter: [ON,OFF]
+        package_manager: [hunter,vcpkg]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -42,17 +42,17 @@ jobs:
           export CC="$(brew --prefix llvm)/bin/clang"
           export CXX="$(brew --prefix llvm)/bin/clang++"
       - name: Prepare vcpkg
-        if: matrix.use_hunter == 'OFF'
+        if: matrix.package_manager == 'vcpkg'
         uses: friendlyanon/setup-vcpkg@v1
         with: { committish: 7e3dcf74e37034eea358934a90a11d618520e139 }
       - name: Configure with vcpkg
-        if: matrix.use_hunter == 'OFF'
+        if: matrix.package_manager == 'vcpkg'
         run:
-          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=${{ matrix.use_hunter }} -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
+          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
       - name: Configure with hunter
-        if: matrix.use_hunter == 'ON'
+        if: matrix.package_manager == 'hunter'
         run:
-          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=${{ matrix.use_hunter }} ../
+          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=ON ../
       - name: Compile
         run: 
           cd build && cmake --build . --parallel
