Add hunter cache

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,8 +39,21 @@ jobs:
       - name: Prepare macos llvm clang
         if: runner.os == 'macOS'
         run: |
-          export CC="$(brew --prefix llvm)/bin/clang"
-          export CXX="$(brew --prefix llvm)/bin/clang++"
+          echo "CMAKE_PREFIX=\"CC='$(brew --prefix llvm)/bin/clang' CXX='$(brew --prefix llvm)/bin/clang++'\"" >> $GITHUB_ENV
+      - name: Prepare hunter
+        if: matrix.package_manager == 'hunter'
+        uses: actions/cache@v2
+        id: cache
+        with:
+          path: |
+            /home/runner/.hunter
+            /Users/runner/.hunter/
+            deps/src
+          key: hunter-clang-v8-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+          restore-keys: |
+            hunter-clang-v8-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
+            hunter-clang-v8-notest-${{ runner.temp }}-${{ github.base_ref }}-
+            hunter-clang-v8-notest-${{ runner.temp }}-
       - name: Prepare vcpkg
         if: matrix.package_manager == 'vcpkg'
         uses: friendlyanon/setup-vcpkg@v1
@@ -48,11 +61,11 @@ jobs:
       - name: Configure with vcpkg
         if: matrix.package_manager == 'vcpkg'
         run:
-          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
+          mkdir -p build && cd build && ${{ env.CMAKE_PREFIX }} cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
       - name: Configure with hunter
         if: matrix.package_manager == 'hunter'
         run:
-          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=ON ../
+          mkdir -p build && cd build && ${{ env.CMAKE_PREFIX }} cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=ON ../
       - name: Compile
         run: 
           cd build && cmake --build . --parallel
