--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,7 +39,10 @@ jobs:
       - name: Prepare macos llvm clang
         if: runner.os == 'macOS'
         run: |
-          echo "CMAKE_PREFIX=\"CC='$(brew --prefix llvm)/bin/clang' CXX='$(brew --prefix llvm)/bin/clang++'\"" >> $GITHUB_ENV
+          rm /usr/bin/clang
+          rm /usr/bin/clang++
+          ln -s $(brew --prefix llvm)/bin/clang /usr/bin/clang
+          ln -s $(brew --prefix llvm)/bin/clang++ /usr/bin/clang++
       - name: Prepare hunter
         if: matrix.package_manager == 'hunter'
         uses: actions/cache@v2
@@ -61,11 +64,11 @@ jobs:
       - name: Configure with vcpkg
         if: matrix.package_manager == 'vcpkg'
         run:
-          mkdir -p build && cd build && ${{ env.CMAKE_PREFIX }} cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
+          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=OFF -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
       - name: Configure with hunter
         if: matrix.package_manager == 'hunter'
         run:
-          mkdir -p build && cd build && ${{ env.CMAKE_PREFIX }} cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=ON ../
+          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DHUNTER_ENABLED=ON ../
       - name: Compile
         run: 
           cd build && cmake --build . --parallel
