--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -13,12 +13,12 @@ on:
   release:
     types: [published, created, edited]
 jobs:
-  build_with_vcpkg:
-    name: build_with_vcpkg
+  build:
+    name: build
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-20.04,windows-2019,macos-latest]
+        os: [ubuntu-20.04,ubuntu-22.04,windows-2019,macos-latest]
     steps:
       - uses: actions/checkout@v2
         with:
@@ -51,5 +51,35 @@ jobs:
           cd build && cmake --build . --parallel
       - name: Test
         if: runner.os != 'Windows'
+        run:
+          cd build && CTEST_OUTPUT_ON_FAILURE=TRUE ctest
+  build_centos:
+    name: build_centos
+    runs-on: ubuntu-20.04
+    container: docker.io/centos:7
+    steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 5
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly-2021-06-17
+          override: true
+      - name: Prepare linux gcc-10
+        run: |
+          yum install yum install -y epel-release centos-release-scl 
+          yum install devtoolset-10 cmake3 git
+          source /opt/rh/devtoolset-10/enable
+          alias cmake='cmake3'
+      - name: Prepare vcpkg
+        uses: friendlyanon/setup-vcpkg@v1
+        with: { committish: 7e3dcf74e37034eea358934a90a11d618520e139 }
+      - name: Configure
+        run:
+          mkdir -p build && cd build && cmake -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
+      - name: Compile
+        run: 
+          cd build && cmake --build . --parallel
+      - name: Test
         run:
           cd build && CTEST_OUTPUT_ON_FAILURE=TRUE ctest
