--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -68,7 +68,7 @@ jobs:
       - name: Prepare linux gcc-10
         run: |
           yum install yum install -y epel-release centos-release-scl 
-          yum install devtoolset-10 cmake3 git
+          yum install -y devtoolset-10 cmake3 git
           source /opt/rh/devtoolset-10/enable
           alias cmake='cmake3'
       - name: Prepare vcpkg
