--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -76,7 +76,9 @@ jobs:
         run: |
           . /opt/rh/devtoolset-10/enable
           . /opt/rh/rh-perl530/enable
-          mkdir -p build && cd build && cmake3 -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../
+          mkdir -p build
+          cd build
+          cmake3 -DCMAKE_BUILD_TYPE=Release -DTESTS=ON -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake ../ || cat /__w/bcos-utilities/bcos-utilities/build/vcpkg-manifest-install.log
       - name: Compile
         run: 
           cd build && cmake3 --build . --parallel
