--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -68,7 +68,9 @@ jobs:
       - name: Prepare centos tools
         run: |
           yum install yum install -y epel-release centos-release-scl
-          yum install -y devtoolset-10  rh-perl530-perl cmake3 git
+          yum install -y devtoolset-10  rh-perl530-perl cmake3
+          yum install https://packages.endpointdev.com/rhel/7/os/x86_64/endpoint-repo.x86_64.rpm
+          yum install git
       - name: Prepare vcpkg
         uses: friendlyanon/setup-vcpkg@v1
         with: { committish: 7e3dcf74e37034eea358934a90a11d618520e139 }
