--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -26,6 +26,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - name: Prepare vcpkg
+        if: runner.os != 'Windows'
+        uses: friendlyanon/setup-vcpkg@v1
+        with: { committish: 51b14cd4e1230dd51c11ffeff6f7d53c61cc5297 }
       - uses: actions/cache@v2
         id: cache
         with:
@@ -33,6 +37,12 @@ jobs:
             /home/runner/vcpkg
             /Users/runner/vcpkg/
             ccache
+            deps/
+            c:/vcpkg
+            !c:/vcpkg/.git
+            !c:/vcpkg/buildtrees
+            !c:/vcpkg/packages
+            !c:/vcpkg/downloads
           key: vcpkg-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
           restore-keys: |
             vcpkg-clang-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
@@ -49,11 +59,12 @@ jobs:
         run: export SDKROOT=$(xcrun --sdk macosx --show-sdk-path) && CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
       - name: configure
         if: runner.os == 'Linux'
-        run: CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DTESTS=ON
+        run: CC=/usr/bin/clang CXX=/usr/bin/clang++ cmake . -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake -DTESTS=ON
       - name: compile
         run: make -j2
       - name: run test
         run: CTEST_OUTPUT_ON_FAILURE=TRUE make test ARGS="--output-on-failure"
+
   build_with_gcc:
     name: build_with_gcc
     runs-on: ${{ matrix.os }}
@@ -64,10 +75,23 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - name: Prepare vcpkg
+        if: runner.os != 'Windows'
+        uses: friendlyanon/setup-vcpkg@v1
+        with: { committish: 51b14cd4e1230dd51c11ffeff6f7d53c61cc5297 }
       - uses: actions/cache@v2
         id: cache
         with:
-          path: /home/runner/vcpkg
+          path: |
+            /home/runner/vcpkg
+            /Users/runner/vcpkg/
+            ccache
+            deps/
+            c:/vcpkg
+            !c:/vcpkg/.git
+            !c:/vcpkg/buildtrees
+            !c:/vcpkg/packages
+            !c:/vcpkg/downloads
           key: vcpkg-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
           restore-keys: |
             vcpkg-gcc-v1-notest-${{ runner.temp }}-${{ github.base_ref }}-${{ hashFiles('.github/workflows/workflow.yml') }}
@@ -85,7 +109,7 @@ jobs:
       - name: install Ubuntu dependencies
         run: sudo apt install -y git curl build-essential cmake ccache lcov
       - name: configure
-        run: cmake . -DTESTS=ON -DCOVERAGE=ON -DDEBUG=on
+        run: cmake . -DTESTS=ON -DCOVERAGE=ON -DDEBUG=on -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake
       - name: compile
         run: make -j2
       - name: run test
@@ -97,6 +121,7 @@ jobs:
         with:
           file: ./coverage.info
           name: bcos-utilities coverage
+
   build_with_centos:
     name: build_with_centos
     runs-on: ubuntu-latest
@@ -108,6 +133,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - name: Prepare vcpkg
+        if: runner.os != 'Windows'
+        uses: friendlyanon/setup-vcpkg@v1
+        with: { committish: 51b14cd4e1230dd51c11ffeff6f7d53c61cc5297 }
       - uses: actions/cache@v2
         id: cache
         with:
@@ -128,9 +157,10 @@ jobs:
         run: |
           source /opt/rh/devtoolset-7/enable
           # mkdir -p build && cd build
-          cmake3 . -DTESTS=ON
+          cmake3 -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake -DTESTS=ON .
           make -j2
           CTEST_OUTPUT_ON_FAILURE=TRUE make test ARGS="--output-on-failure"
+          
   build_with_windows:
     name: build_with_windows
     runs-on: ${{ matrix.os }}
@@ -138,7 +168,7 @@ jobs:
       matrix:
         os: [windows-2019]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
         with:
           fetch-depth: 5
       - uses: actions/cache@v2
@@ -163,7 +193,7 @@ jobs:
         uses: microsoft/setup-msbuild@v1.1
       - name: configure
         if: runner.os == 'Windows'
-        run: mkdir -p build && cd build && cmake -G "Visual Studio 16 2019" -A x64 ../
+        run: mkdir -p build && cd build && cmake -G "Visual Studio 16 2019" -A x64 -DCMAKE_TOOLCHAIN_FILE=c:/vcpkg/scripts/buildsystems/vcpkg.cmake ../
       - name: compile
         run: 
           cd build && MSBuild /version && MSBuild bcos-utilities.sln /p:Configuration=Release /p:Platform=x64
