--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -133,6 +133,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 5
+      - name: Prepare vcpkg
+        if: runner.os != 'Windows'
+        uses: friendlyanon/setup-vcpkg@v1
+        with: { committish: 51b14cd4e1230dd51c11ffeff6f7d53c61cc5297 }
       - uses: actions/cache@v2
         id: cache
         with:
@@ -153,7 +157,7 @@ jobs:
         run: |
           source /opt/rh/devtoolset-7/enable
           # mkdir -p build && cd build
-          cmake3 . -DTESTS=ON
+          cmake3 -DCMAKE_TOOLCHAIN_FILE=${{ env.VCPKG_ROOT }}/scripts/buildsystems/vcpkg.cmake -DTESTS=ON .
           make -j2
           CTEST_OUTPUT_ON_FAILURE=TRUE make test ARGS="--output-on-failure"
           
